// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Flexbox /> component with layout helpers (height, width, margin, padding, etc) 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
"
`;

exports[`Renders <Flexbox /> component with layout helpers (height, width, margin, padding, etc) 2`] = `
<div
  className="sc-bdVaJa eylexG"
/>
`;

exports[`Renders <Flexbox /> component with several flexbox props 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
"
`;

exports[`Renders <Flexbox /> component with several flexbox props 2`] = `
<div
  className="sc-bdVaJa DtNwl"
/>
`;

exports[`Renders <Flexbox /> with extra props, outside expected/defined ones (like event handlers or className) 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
"
`;

exports[`Renders <Flexbox /> with extra props, outside expected/defined ones (like event handlers or className) 2`] = `
<div
  className="test-class sc-bdVaJa cXgeQK"
  id="test-id"
  onClick={[Function]}
/>
`;

exports[`Renders <Flexbox /> with flex items with non-flex display 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
.dLBgrm {
  display:block;
}
"
`;

exports[`Renders <Flexbox /> with flex items with non-flex display 2`] = `
<div
  className="sc-bdVaJa cXgeQK"
>
  <div
    className="sc-bdVaJa dLBgrm"
  />
</div>
`;

exports[`Renders <Flexbox /> with inline styles that can overwrite flexbox-react related props too 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
.DtNwl {
  -webkit-align-items:center;
  -webkit-box-align:center;
  -ms-flex-align:center;
  align-items:center;
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  -webkit-flex-direction:column;
  -ms-flex-direction:column;
  flex-direction:column;
  -webkit-box-flex:1;
  -webkit-flex-grow:1;
  -ms-flex-positive:1;
  flex-grow:1;
  -webkit-flex-wrap:wrap;
  -ms-flex-wrap:wrap;
  flex-wrap:wrap;
  -webkit-box-pack:center;
  -webkit-justify-content:center;
  -ms-flex-pack:center;
  justify-content:center;
}
.eylexG {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
  height:100%;
  margin:66px33px;
  margin-right:25px;
  max-width:100vw;
  min-height:100vh;
  padding:99px;
  padding-left:50px;
  width:100px;
}
"
`;

exports[`Renders <Flexbox /> with inline styles that can overwrite flexbox-react related props too 2`] = `
<div
  className="sc-bdVaJa cXgeQK"
  style={
    Object {
      "backgroundColor": "red",
      "display": "block",
    }
  }
/>
`;

exports[`Renders custom element (header) <Flexbox /> component 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
"
`;

exports[`Renders custom element (header) <Flexbox /> component 2`] = `
<header
  className="sc-bdVaJa cXgeQK"
/>
`;

exports[`Renders minimal <Flexbox /> component 1`] = `
"/*sc-component-id:sc-bdVaJa*/.sc-bdVaJa {
}
.cXgeQK {
  display:-webkit-box;
  display:-webkit-flex;
  display:-ms-flexbox;
  display:flex;
}
"
`;

exports[`Renders minimal <Flexbox /> component 2`] = `
<div
  className="sc-bdVaJa cXgeQK"
/>
`;
